--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -96,7 +96,7 @@
     left: 50%;
     right: 50%;
     transform: translateX(-50%) translateY(-10vh);
-    width: min(var(--spacing-96), 50vw);
+    width: min(var(--spacing-96), 90vw);
     border-radius: var(--spacing-4);
     opacity: 0;
     transition: all .4s cubic-bezier(0.4, 0.0, 1, 1);
@@ -106,6 +106,10 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 0;
+
+    @media (width >= 768px) {
+      width: min(var(--spacing-96), 50vw);
+    }
   
     & input[type="text"] {
       border-radius: var(--spacing-2) 0 0 var(--spacing-2);
@@ -133,7 +137,7 @@
   position: relative;
   border-radius: 5px;
   width: 40px;
-  height: 32px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
